--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>Document</title>
 </head>
 <body>
+	<div id="name1"></div>
+	<div id="name2"></div>
+	<div id="name3"></div>
+	<div id="name4"></div>
+	<div id="name5"></div>
 	
 </body>
 </html>
